[package]
name = "image_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.106"
image = { version = "0.25", default-features = false, features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "pnm",
    "webp",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
